# lem-in

./: CMakeLists.txt  ants.c  base_set.c  check_int.c  del.c  get_next_line.h  get_way.c  in  in2  lem-in.h  links.c  main.c  room.c  way.c
